--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     </div>
 
     <script>
-        const blacklist = ['joko', 'andi', 'siti'];
+        const blacklist = ['AJUI', 'salda', 'ajui'];
 
         function cekCinta() {
             let namaAnda = document.getElementById("namaAnda").value;
